# vikshana-graft-app

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile.grafana-mcp  Makefile  PLAN.md  README.md  docker-compose.yaml  go.mod  go.sum  opencode.json  package-lock.json  package.json  release-please-config.json
config/: loki.yaml  (+3 more)
services/orca/backend/: Dockerfile  pyproject.toml
services/orca/backend/app/: __init__.py  config.py  db.py  logging.py  main.py
services/orca/backend/app/agent/: dedup.py  graph.py  historical_context.py  rca_graph.py  rca_state.py  state.py  streaming.py
services/orca/backend/app/agent/mcp/: grafana_client.py  postgres_client.py
services/orca/backend/app/agent/nodes/: analyze.py  investigate.py  publish.py  report.py  triage.py
services/orca/backend/app/agent/prompts/: analyze.md  investigate.md  report.md  triage.md
services/orca/backend/app/api/: rca.py  rca_sessions.py  webhooks.py
services/orca/backend/app/integrations/: slack.py
services/orca/backend/app/models/: agent_step.py  alert.py  rca.py  rca_duplicate_alert.py  rca_embedding.py  rca_session.py  types.py
services/orca/backend/app/schemas/: rca.py  rca_session.py  webhook.py
services/orca/backend/scripts/: backfill_dedup.py  seed_dummy.py
services/orca/backend/tests/: conftest.py
services/orca/backend/tests/integration/: test_api_rca_sessions.py  test_org_isolation.py  test_rca_api.py  test_webhook_dedup.py  test_webhook_to_rca.py
services/orca/backend/tests/unit/: test_analyze_node.py  test_dedup.py  test_graph.py  test_historical_context.py  test_investigate_node.py  test_mcp_client.py  test_models.py  test_publish_node.py  test_report_node.py  test_triage_node.py  test_webhook_validation.py
services/test-app/: Dockerfile  pyproject.toml
services/test-app/app/: chaos.py  main.py
services/test-app/app/routes/: api.py  chaos.py
services/test-app/frontend/: index.html  package.json  vite.config.ts
services/test-app/frontend/src/: App.tsx  index.css
(+189 files in other folders)
